...
  const handleAlert = () => {
    Alert.alert(
      'Sign in to continue',
      '',
      [
        {
          text: 'OK',
          onPress: () => {
            navigateToScreen(screenNames.signIn);
          },
        },
        {text: 'Cancel', style: 'cancel'},
      ],
...
