export const screenNames = {
  signIn: 'SignIn',
  signUp: 'SignUp',
  homeStack: 'HomeStack',
  profileStack: 'ProfileStack',
  settingsStack: 'SettingsStack',
  getStarted: 'Get Started',
  productList: 'ProductList',
  productForm: 'ProductForm',
  fashion: 'Fashion',
  beauty: 'Beauty',
  productDetail: 'ProductDetail',
  chatScreen: 'ChatScreen',
  chatList: 'ChatList',
  cart: 'Cart',
  order: 'Order',
  albums: 'Albums',
  profile: 'Profile',
  settings: 'Settings',
  notifications: 'Notifications',
  forgotPassword: 'ForgotPassword',
  searchResult: 'SearchResult',
} as const;
